--- a/Best-CoViD.tex
+++ b/Best-CoViD.tex
@@ -1,4 +1,4 @@
-\section{Best Theme Paper Selection}
+\section{Best Theme Paper + CoViD Measures}
 \label{sec:Best}
 
 \begin{description}
@@ -7,12 +7,13 @@
    will have a special session after the regular reviewing process, if needed, 
    to nominate exactly one Best Paper that will be proposed as a candidate. 
 
-   \item[CoViD Measures] We cumultaed significant experience during the two 
+   \item[CoViD Measures] We cumulated significant experience during the two 
    fully online previous editions: we can switch to full virtual immediately,
    assuming online support (Zoom/Whova) is available. A hybrid setting is 
    possible assuming some OC members are able to attend physically, and a streaming
    solution is available.
    
    We would try to preserve the afternoon brainstorming/discussion session if possible,
-   but would remove it as well as the one keynote if necessary. 
+   but would remove it as well as one of the keynotes if necessary, and convert
+   to a half-day event. 
 \end{description}
